--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -225,3 +225,63 @@ justify-content: center;
 .red{
   color: #C5283D;
 }
+#levelsMenu {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #2E2C2A;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  color: white;
+  z-index: 100;
+}
+
+#levelsMenu h2 {
+  font-size: 2em;
+  margin-bottom: 20px;
+}
+
+.levelButton {
+  display: block;
+  width: 200px;
+  padding: 10px;
+  margin: 10px auto;
+  background-color: #17BEBB;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.2em;
+}
+
+#levelsButton{
+  color: white;
+  height: 40px;
+  width: 70px;
+  border-radius: 10px;
+  background-color: #2E2C2A;
+}
+
+#levelsButton:hover {
+  background-color: lightseagreen;
+}
+
+#closeLevelsButton {
+  display: block;
+  width: 150px;
+  padding: 10px;
+  margin: 20px auto;
+  background-color: #C5283D;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.2em;
+}
+
+.levelButton:hover,
+#closeLevelsButton:hover {
+  background-color: #359381; /* Adjusted hover color */
+}
